# ETHRome-2025

./: README.md
backend/: .gitignore  pyproject.toml
contracts/: L2Registrar.sol  RadunoEvent.sol  RadunoEventFactory.sol
contracts/interfaces/: IL2Registar.sol  IL2Registry.sol  IRadunoEvent.sol
frontend/: CLAUDE.md  eslint.config.mjs  minikit.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  rootProvider.tsx
frontend/app/components/: BottomNav.tsx  EventCard.tsx  WelcomeAnimation.tsx  WelcomePage.tsx
frontend/app/create/: page.tsx
frontend/app/events/: page.tsx
frontend/app/events/[id]/: page.tsx
frontend/app/my-events/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: Providers.tsx  eruda-provider.tsx  theme-switcher.tsx
frontend/components/ui/: button.tsx  sonner.tsx  switch.tsx
frontend/lib/: contract.ts  events.ts
frontend/lib/contracts/: event.ts  factory.ts  registry.ts
xmtp-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  event.ts  index.ts  package-lock.json  package.json  utils.ts
